--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,8 +1,16 @@
-events {}
+events {
+	worker_connections 1024;
+}
 
 http {
+	server_tokens off;
+	charset utf-8;
+
+
 	server {
-		listen 80;
+		listen 80 default_server;
+
+		server_name _;
 
 		location / {
 			proxy_pass http://frontend:80;
@@ -11,5 +19,34 @@ http {
 		location /api/ {
 			proxy_pass http://backend:8080;
 		}
+
+		location ~ /.well-known/acme-challenge/ {
+			root /var/www/certbot;
+		}
+
+		# return 301 https://$host$request_uri;
 	}
+
+	# server {
+	# 	listen 443 ssl http2;
+	#
+	# 	ssl_certificate /etc/letsencrypt/live/${DOMAIN}/fullchain.pem;
+	# 	ssl_certificate_key /etc/letsencrypt/live/${DOMAIN}/privkey.pem;
+	# 	server_name ${DOMAIN} ${CDOMAIN};
+	# 	root /var/www/html;
+	# 	index index.php index.html index.htm;
+	#
+	#
+	# 	location / {
+	# 		proxy_pass http://frontend:80;
+	# 	}
+	#
+	# 	location /api/ {
+	# 		proxy_pass http://backend:8080;
+	# 	}
+	#
+	# 	location ~ /.well-known/acme-challenge/ {
+	# 		root /var/www/certbot;
+	# 	}
+	# }
 }
